--- a/index.html
+++ b/index.html
@@ -282,8 +282,7 @@
 <script  src="js/vendor/vendor.js"></script>
 <script  src="js/main.js"></script>
 <script>
-  $('.product-grid:gt(-4
-  )').hide();
+  $('.product-grid:gt(-4)').hide();
 </script>
 </body>
 </html>
