--- a/index.html
+++ b/index.html
@@ -213,9 +213,15 @@
                 <!--  col -3  -->
                 <div class="col-md-4">
                   <!--  widget  -->
-                  <div class="widget-2">
-                    <h5>Latest tweets</h5>
-                    <div class="twitter-posts"></div>
+                  <div class="widget-2 link">
+                    <h5>Related Links</h5>
+                    <ul>
+                          <li class=""><a href="#"  class="">Home</a> </li>
+                          <li><a href="#about">About</a></li>
+                          <li><a href="#wholesale">Wholesale</a></li>
+                          <li><a href="#products">Products</a></li>
+                          <li><a href="#">Contact</a></li>
+                    </ul>
                   </div>
                   <!--  widget //  -->
                 </div>
@@ -246,20 +252,8 @@
             </div>
             <div class="footer-bottom">
               <div class="container">
-                <div class="col-md-6 footer-bottom-left">
-                  <p> <a href="">VEGGIE</a> made with love by <a href="http://0effortthemes.com/">0effortthemes</a></p>
-                </div>
-                <div class="col-md-6">
-                  <nav class="footer-nav">
-                    <ul>
-                      <li><a href="index.html">Home</a></li>
-                      <li><a href="shop.html">Shop</a></li>
-                      <li><a href="farmers.html">farmers</a></li>
-                      <li><a href="about.html">About</a></li>
-                      <li><a href="blog.html">Blog</a></li>
-                      <li><a href="contact.html">Contact</a></li>
-                    </ul>
-                  </nav>
+                <div class="col-md-12" style="text-align:center;">
+                  <p> Copyright ©<span style="color:white;"> RM General Trading</span>. All Rights Reserved.</p>
                 </div>
               </div>
             </div>
