--- a/products.html
+++ b/products.html
@@ -19,7 +19,7 @@
                 <a href="" class="menu-toogle"></a>
               <ul>
                 <li class="menu-item-has-children"><a href="#"  class="active">Home</a></li>
-                <li><a href="#products">Products</a></li>
+                <li><a href="#product">Products</a></li>
                 <li><a href="#service">Service</a></li>
                 <li><a href="contact.html">Contact</a></li>
               </ul>
