--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
         <link rel="stylesheet" href="vendor.css">
         <link rel="stylesheet" href="style.css">
         <script  src="js/vendor/modernizr.js"></script>
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap" rel="stylesheet">
     </head>
     <body>
     <!--[if lt IE 10]>
@@ -65,7 +68,7 @@
                   <div class="banner-caption-v1">
                       <div class="container" style="margin-top:-20%;">
                           <div class="banner-caption-text">
-                              <h1 class="text-1" >RM</h1>
+                              <h1 class="text-1" style="font-family: 'Great Vibes', cursive;" >RM</h1>
                               <!-- <h2><img src="images/banner-text-1.png" height="142" width="436" alt=""></h2> -->
                               <h2 style="text-align: center;margin-top: -20px;color: #fff;">General Trading</h2>
                               <p> There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour </p>
@@ -121,9 +124,9 @@
                       <div class="col-md-2"><a href="#" class="btn-block
                       btn btn-outline hvr-back-pulse " data-filter="*">All</a></div>
                       <div class="col-md-2"><a href="#" class="btn-block
-                      btn btn-outline hvr-back-pulse " data-filter=".fruites">Beverages</a></div>
+                      btn btn-outline hvr-back-pulse " data-filter=".beverages">Beverages</a></div>
                       <div class="col-md-2"><a href="#" class="btn-block
-                      btn btn-outline hvr-back-pulse " data-filter=".organic">Rice&Flour</a></div>
+                      btn btn-outline hvr-back-pulse " data-filter=".rice">Rice&Flour</a></div>
                       <div class="col-md-2"><a href="#" class="btn-block
                       btn btn-outline hvr-back-pulse" data-filter=".frojen">Frozen Product</a></div>
                       <div class="col-md-2"><a href="#" data-filter=".new-one" class="btn-block
@@ -134,13 +137,13 @@
                 </div>
                 <div class="product-list row pad-top-large">
                   <div class="product-grid new-one">
-                      <div class="product-v1 organic">
+                      <div class="product-v1 rice">
                           <figure>
                             <img src="images/homepage/p2.png" height="410" width="370" alt="">
                           </figure>
                       </div>
                     </div>
-                    <div class="product-grid fruites">
+                    <div class="product-grid beverages">
                         <div class="product-v1">
                             <figure>
                               <img src="images/homepage/p1.png" height="410" width="370" alt="">
@@ -154,21 +157,21 @@
                             </figure>
                         </div>
                     </div>
-                    <div class="product-grid new-one organic">
+                    <div class="product-grid rice">
                         <div class="product-v1">
                             <figure>
                               <img src="images/homepage/p1.png" height="410" width="370" alt="">
                             </figure>
                         </div>
                     </div>
-                    <div class="product-grid dried fruites">
+                    <div class="product-grid beverages">
                         <div class="product-v1">
                             <figure>
                               <img src="images/homepage/p2.png" height="410" width="370" alt="">
                             </figure>
                         </div>
                     </div>
-                    <div class="product-grid frojen organic">
+                    <div class="product-grid rice">
                         <div class="product-v1">
                             <figure>
                               <img src="images/homepage/p3.png" height="410" width="370" alt="">
