--- a/products.html
+++ b/products.html
@@ -21,7 +21,7 @@
                 <li class="menu-item-has-children"><a href="#"  class="active">Home</a></li>
                 <li><a href="#product">Products</a></li>
                 <li><a href="#service">Service</a></li>
-                <li><a href="contact.html">Contact</a></li>
+                <li><a href="#s">Contact</a></li>
               </ul>
           </nav>
           <div class="logo">          
@@ -50,7 +50,7 @@
           <li class="menu-item-has-children"><a href="#">Home</a></li>
           <li><a href="#product">Products</a></li>
           <li><a href="#service">Services</a></li>
-          <li><a href="contact.html">Contact</a></li>
+          <li><a href="#">Contact</a></li>
         </ul>
       </div>
 
