--- a/products.html
+++ b/products.html
@@ -9,6 +9,12 @@
         <link rel="stylesheet" href="vendor.css">
         <link rel="stylesheet" href="style.css">
         <script  src="js/vendor/modernizr.js"></script>
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap" rel="stylesheet">
+        <style>
+        @import url('https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap');
+        </style>
     </head>
     <body>
       <div class="wrap">
@@ -57,7 +63,7 @@
       <div class="banner-v1 banner-image-container banner-inner" style="background-image: url(images/homepage/bn.jpg)">
         <img src="images/about/banner.jpg" height="624" width="1920" class="banner-image" alt="">
         <div class="banner-caption-v2">
-          <h1>Products & Services</h1>
+          <h1 style="font-family: 'Great Vibes', cursive;">Products & Services</h1>
         </div>
       </div>
 
