--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
               <div class="banner-v1 banner-image-container " style="background-image: url(images/homepage/ban.jfif)">
                 <!-- <img src="images/banner/banner.jpg" height="1098" width="1920" alt="" class="banner-image"> -->
                   <div class="banner-caption-v1">
-                      <div class="container" style="margin-top:-20%;">
+                      <div class="container">
                           <div class="banner-caption-text">
                               <h1 class="text-1" style="font-family: 'Great Vibes', cursive;" >RM</h1>
                               <!-- <h2><img src="images/banner-text-1.png" height="142" width="436" alt=""></h2> -->
