--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                     </div>
                     <div class="row-float pad-top-large product-list-filter">
                       <div class="col-md-2"><a href="#" class="btn-block
-                      btn btn-outline hvr-back-pulse " data-filter="*">All</a></div>
+                      btn btn-outline hvr-back-pulse " data-filter=".all">All</a></div>
                       <div class="col-md-2"><a href="#" class="btn-block
                       btn btn-outline hvr-back-pulse " data-filter=".beverages">Beverages</a></div>
                       <div class="col-md-2"><a href="#" class="btn-block
@@ -139,12 +139,33 @@
                     </div>
                 </div>
                 <div class="product-list row pad-top-large">
-                  <div class="product-grid new-one">
+                    <div class="product-grid new-one">
                       <div class="product-v1 rice">
                           <figure>
                             <img src="images/homepage/p2.png" height="410" width="370" alt="">
                           </figure>
                       </div>
+                    </div>
+                    <div class="product-grid all">
+                        <div class="product-v1">
+                            <figure>
+                              <img src="images/homepage/p1.png" height="410" width="370" alt="">
+                            </figure>
+                        </div>
+                    </div>
+                    <div class="product-grid all">
+                        <div class="product-v1">
+                            <figure>
+                              <img src="images/homepage/p2.png" height="410" width="370" alt="">
+                            </figure>
+                        </div>
+                    </div>
+                    <div class="product-grid all">
+                        <div class="product-v1">
+                            <figure>
+                              <img src="images/homepage/p3.png" height="410" width="370" alt="">
+                            </figure>
+                        </div>
                     </div>
                     <div class="product-grid beverages">
                         <div class="product-v1">
