--- a/index.html
+++ b/index.html
@@ -209,7 +209,51 @@
                 </div>
           </section>
           <!-- Content Section 6 // -->
+    <!-- Content Layout -->
+    <section class="content-layout content-section">
+      <div class="container">
+        <div class="heading text-center">
+          <h2>Contact Us</h2>
+        </div>
+        <div class="contents">
+          <p class="text-center">Lorem Ipsum is that it has a more-or-less normal distribution of   <span class="text-break"></span>letters, as opposed to using Content here, content here', making it look like readable English. </p>
 
+            <div class="contact-form pad-top-large">    
+            <form data-parsley-validate>
+              <div class="row">
+                <div class="form-group col-sm-6">
+                  <input type="text" placeholder="Your Name" class="form-control input-lg" required name="name">
+                </div>
+                <div class="form-group col-sm-6">
+                  <input type="email" placeholder="Email Address" class="form-control input-lg" required name="email">
+                </div>
+              </div>
+              <div class="row">
+                <div class="form-group col-sm-6">
+                  <input type="text" placeholder="Subject" class="form-control input-lg" required name="subject">
+                </div>
+                <div class="form-group col-sm-6">
+                  <input type="text" placeholder="Phone No" class="form-control input-lg" required name="phoneno">
+                </div>
+              </div>
+              <div class="row">
+                <div class="form-group col-sm-12">
+                  <textarea class="form-control" rows="5" required placeholder="Message" name="mess"></textarea>
+                    </div>              
+                </div>
+              <div class="form-group text-center">
+                <button class="btn btn-primary btn-lg hvr-shutter-out-vertical">Send Message</button>
+              </div>
+            </form>
+          <div class="alert alert-success col-xs-12 hidden form-messges ">
+              <p>We will responce as soon as possible.</p>
+          </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- // Content Layout -->
 
           <!-- Main Footer  -->
           <footer class="main-footer">
