--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                           <li><a href="#about">About</a></li>
                           <li><a href="#wholesale">Wholesale</a></li>
                           <li><a href="#products">Products</a></li>
-                          <li><a href="#">Contact</a></li>
+                          <li><a href="#contact">Contact</a></li>
                         </ul>
                       </nav>
                       <div class="logo">          
@@ -63,7 +63,7 @@
                       <li><a href="#about">About</a></li>
                       <li><a href="#wholesale">Wholesale</a></li>
                       <li><a href="#products">Products</a></li>
-                      <li><a href="#">Contact</a></li>
+                      <li><a href="#contact">Contact</a></li>
                   </ul>
               </div>
               <div class="banner-v1 banner-image-container " style="background-image: url(images/homepage/ban.jfif)">
@@ -210,7 +210,7 @@
           </section>
           <!-- Content Section 6 // -->
     <!-- Content Layout -->
-    <section class="content-layout content-section">
+    <section class="content-layout content-section" id="contact">
       <div class="container">
         <div class="heading text-center">
           <h2>Contact Us</h2>
