--- a/index.html
+++ b/index.html
@@ -131,32 +131,32 @@
                       <div class="col-md-2"><a href="#" class="btn-block
                       btn btn-outline hvr-back-pulse " data-filter=".rice">Rice&Flour</a></div>
                       <div class="col-md-2"><a href="#" class="btn-block
-                      btn btn-outline hvr-back-pulse" data-filter=".frojen">Frozen Product</a></div>
-                      <div class="col-md-2"><a href="#" data-filter=".new-one" class="btn-block
+                      btn btn-outline hvr-back-pulse" data-filter=".frozen">Frozen Product</a></div>
+                      <div class="col-md-2"><a href="#" data-filter=".dry" class="btn-block
                       btn btn-outline hvr-back-pulse ">Dry Foods</a></div>
-                      <div class="col-md-2"><a href="#" data-filter=".dried" class="btn-block
+                      <div class="col-md-2"><a href="#" data-filter=".cosmetics" class="btn-block
                       btn btn-outline hvr-back-pulse ">Cosmetics</a></div>
                     </div>
                 </div>
                 <div class="product-list row pad-top-large">
-                    <div class="product-grid new-one">
+                    <div class="product-grid beverages">
                       <div class="product-v1 rice">
                           <figure>
-                            <img src="images/homepage/p2.png" height="410" width="370" alt="">
+                            <img src="images/homepage/b1.png" height="410" width="370" alt="">
                           </figure>
                       </div>
                     </div>
                     <div class="product-grid all">
                         <div class="product-v1">
                             <figure>
-                              <img src="images/homepage/p1.png" height="410" width="370" alt="">
+                              <img src="images/homepage/b3.png" height="410" width="370" alt="">
                             </figure>
                         </div>
                     </div>
                     <div class="product-grid all">
                         <div class="product-v1">
                             <figure>
-                              <img src="images/homepage/p2.png" height="410" width="370" alt="">
+                              <img src="images/homepage/r2.png" height="410" width="370" alt="">
                             </figure>
                         </div>
                     </div>
@@ -170,35 +170,98 @@
                     <div class="product-grid beverages">
                         <div class="product-v1">
                             <figure>
-                              <img src="images/homepage/p1.png" height="410" width="370" alt="">
-                            </figure>
-                        </div>
-                    </div>
-                    <div class="product-grid frojen">
-                        <div class="product-v1">
-                            <figure>
-                              <img src="images/homepage/p3.png" height="410" width="370" alt="">
-                            </figure>
-                        </div>
-                    </div>
-                    <div class="product-grid rice">
-                        <div class="product-v1">
-                            <figure>
-                              <img src="images/homepage/p1.png" height="410" width="370" alt="">
+                              <img src="images/homepage/b2.png" height="410" width="370" alt="">
                             </figure>
                         </div>
                     </div>
                     <div class="product-grid beverages">
                         <div class="product-v1">
                             <figure>
-                              <img src="images/homepage/p2.png" height="410" width="370" alt="">
+                              <img src="images/homepage/b3.png" height="410" width="370" alt="">
                             </figure>
                         </div>
                     </div>
                     <div class="product-grid rice">
                         <div class="product-v1">
                             <figure>
-                              <img src="images/homepage/p3.png" height="410" width="370" alt="">
+                              <img src="images/homepage/r1.png" height="410" width="370" alt="">
+                            </figure>
+                        </div>
+                    </div>
+                    <div class="product-grid rice">
+                        <div class="product-v1">
+                            <figure>
+                              <img src="images/homepage/r2.png" height="410" width="370" alt="">
+                            </figure>
+                        </div>
+                    </div>
+                    <div class="product-grid rice">
+                        <div class="product-v1">
+                            <figure>
+                              <img src="images/homepage/r3.png" height="410" width="370" alt="">
+                            </figure>
+                        </div>
+                    </div>
+                    <div class="product-grid frozen">
+                        <div class="product-v1">
+                            <figure>
+                              <img src="images/homepage/f1.png" height="410" width="370" alt="">
+                            </figure>
+                        </div>
+                    </div>
+                    <div class="product-grid frozen">
+                        <div class="product-v1">
+                            <figure>
+                              <img src="images/homepage/f2.png" height="410" width="370" alt="">
+                            </figure>
+                        </div>
+                    </div>
+                    <div class="product-grid frozen">
+                        <div class="product-v1">
+                            <figure>
+                              <img src="images/homepage/f3.png" height="410" width="370" alt="">
+                            </figure>
+                        </div>
+                    </div>
+                    <div class="product-grid dry">
+                        <div class="product-v1">
+                            <figure>
+                              <img src="images/homepage/d3.png" height="410" width="370" alt="">
+                            </figure>
+                        </div>
+                    </div>
+                    <div class="product-grid dry">
+                        <div class="product-v1">
+                            <figure>
+                              <img src="images/homepage/d1.png" height="410" width="370" alt="">
+                            </figure>
+                        </div>
+                    </div>
+                    <div class="product-grid dry">
+                        <div class="product-v1">
+                            <figure>
+                              <img src="images/homepage/d2.png" height="410" width="370" alt="">
+                            </figure>
+                        </div>
+                    </div>
+                    <div class="product-grid cosmetics">
+                        <div class="product-v1">
+                            <figure>
+                              <img src="images/homepage/c1.png" height="410" width="370" alt="">
+                            </figure>
+                        </div>
+                    </div>
+                    <div class="product-grid cosmetics">
+                        <div class="product-v1">
+                            <figure>
+                              <img src="images/homepage/c2.png" height="410" width="370" alt="">
+                            </figure>
+                        </div>
+                    </div>
+                    <div class="product-grid cosmetics">
+                        <div class="product-v1">
+                            <figure>
+                              <img src="images/homepage/c3.png" height="410" width="370" alt="">
                             </figure>
                         </div>
                     </div>
